--- a/collections/Mural.html
+++ b/collections/Mural.html
@@ -60,7 +60,10 @@
 <p class="text">Blog articles were created to depict the various emails and proposals that were created in order to create the final pieces.
 </p>
 <p class="text">
-    <a href="muralfiles/Mural Proposal.pdf">Introduction</a><br>
+    <a href="muralfiles/intro.html">Introduction</a><br>
+    <a href="muralfiles/challenges.html">The Challenges</a><br>
+    <a href="muralfiles/picnic.html">The Picnic</a><br>
+    <a href="muralfiles/boards.html">From Paper To Boards</a><br>
 </p>
 <br>
 <br>
