--- a/collections/muralfiles/picnic.html
+++ b/collections/muralfiles/picnic.html
@@ -10,23 +10,22 @@
 <body style="text-align: center; margin: 0%;">
 <div style="margin-left: 10%; margin-right: 10%;">
 <p class="titletext" style="margin-top: 8%; margin-bottom: 0px;"><b>The Picnic</b></p><br>
-<p class="text">It was an exciting event where I was able to set up a table with the proposal on display.
+<p class="text">The picnic was an exciting event where I was able to set up a table with the proposal on display and meet the rest
+  of the community.<br>
     <video autoplay muted loop src="setup.mp4" style="width: 50%;"></video>
   <br><br> 
-  John was not deterred at all. He said that this can still work and while he talked, more ideas popped into my head. At the end of 
-  the call, we had come up with the idea to create boards similar to the cafe boards so that they were semi-permanent instead of a 
-  permanent structure.
-   <br><br> A new proposal was created:
+  The community was excited with the idea of the murals. They asked lots of questions and became more and more excited about the 
+  idea of being able to participate in the creation of the murals.
+   <br>
+   <video autoplay muted loop src="picnic.mp4" style="width: 50%;"></video>
 
-<a href="Mural Proposal Version 2 (1).pdf">Proposal Version 2</a>
 <br>
 <br>
-The next step was for me to meet more of the community at their parish picnic on September 12th. I am making sure designs are 
-completed and available for the community to look at during the picnic.
+Now that the word was spread to the parish about the Community Day on October 10th, it was time to start creating the boards!
   </p><br><br>
   <br> 
   <hr><p class="text">
-  See the next blog post: <a href="../muralfiles/picnic.html">Upcoming</a><br>
+  See the next blog post: <a href="../muralfiles/boards.html">From Paper To Boards</a><br>
   Return to the <a href="../Mural.html">Mural Main Page</a></p>
 
 <br>
