wallpapers and about added
new artist statement and bio
new wallpapers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="parallax.css">
   <link rel="stylesheet" href="text.css">
   <link rel="stylesheet" href="navbar.css">
-  <title>Sydney Kit</title>
+  <title>Sydney Kit - Digital Artist, Columbus Artist, Animator, Content Creator</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     <div class="titletext">Latest News</div>
     <div class="text">
       <p>Sydney Kit is now a paint and sip instructor with <a href="collections/PourOnTheArt.html">Pour On The Art</a>! See the calendar of events to schedule a ticket today.</p>
-    <p> <a href="shop.html">Order the <i>Love, Me Volume 1</i> comic now!</a> For more information check the <a href="shop.html">shop</a> or <a href="loveme/about.html"><i>Love, Me</i> page</a>.</p>
+    <p>See Sydney's Page on the <a href="https://www.columbusmakesart.com/artist/9369-sydney-kit">Columbus Makes Art Directory</a>!</p>
     <p>See the full calendar of events <a href="calendar.html">here</a>.</p>
 </div>
 </div>
