--- a/loveme/wallpapers.html
+++ b/loveme/wallpapers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Love, Me Wallpapers</title>
+        <title>Love, Me Wallpapers - Free Wallpapers for Download</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../text.css">
         <link rel="stylesheet" href="../navbar.css">
@@ -38,6 +38,13 @@
      <div class="box";>
     <a href="Love,Me_mini_Jelle_wallpaper.jpg" download><img style="width: 50%;" src="Love,Me_mini_Jelle_wallpaper.jpg"></img></a>
       <a href="B_wallpaper.jpg" download><img src="B_wallpaper.jpg" style= "width: 50%;";></img></a>
+  </div>
+  <div class="box";>
+    <a href="kangaroo_wallpaper.jpg" download><img style="width: 50%;" src="kangaroo_wallpaper.jpg"></img></a>
+      <a href="Skull_LMMS_wallpaper.jpg" download><img src="Skull_LMMS_wallpaper.jpg" style= "width: 50%;";></img></a>
+  </div>
+  <div class="box";>
+    <a href="Rachel_LMMS_wallpaper.jpg" download><img style="width: 50%;" src="Rachel_LMMS_wallpaper.jpg"></img></a>
   </div>
   <br>
   <br>
