--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="text.css">
     <link rel="stylesheet" href="navbar.css">
-  <title>Shop</title>
+  <title>Shop Sydney Kit Art - Digital Art, Digital Painting, Artist Shop, Commission Art</title>
   <style>
     .box{
         display:flex;
