--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="text.css">
   <link rel="stylesheet" href="navbar.css">
-  <title>About</title>
+  <title>About Sydney Kit - Columbus Artist, Digital Artist, Content Creator</title>
 </head>
 
 <body style="text-align: center; margin: 0px;">
@@ -27,8 +27,9 @@
   <div><img src="img/profile pic.jpeg" width="60%"></div>
   <br>
   <p class="headertext">Artist Statement</p>
-  <p class="text">After finding a passion for art her senior year of high school, Sydney Kit became a digital artist, specializing in animations. Her work is inspired by the experimentation of new
-    mediums along with the people that surround her. Sydney Kit is the creator of the animated series "A Laney Day" and the comic series "Love, Me".
+  <p class="text">Through the digital art of animation and comic books, I create work that evokes an emotional response from my audience to either give them a lighthearted break from the struggles of the world or 
+    generate a hunger for a new business. With an adaptable art style, I create commercial content that fits a company’s needs and create comic books that advise the audience about advice they unknowingly needed to 
+    hear. My art stimulates engagement across environments. Whether crafting a visual vocabulary for commercial projects or illustrating personal narratives, my art creates a lasting impression on the audience.
   </p>
   <br>
   <br>
@@ -36,14 +37,8 @@
   <img src="collections/files/animals&portraits_sy.jpg" style="width: 60%;">
   <br>
   <p class="headertext">Biography</p>
-  <p class="text"> Sydney Kit is a current undergrad student studying Art and Technology with a specialization in animation at The Ohio State University. 
-    From an early age, she wanted to enter the medical field, just like most of her family. However, in her senior year of high school the counselor had told her that she was required to take an art class. 
-   <br><br> After several emails trying to convince the counselor to let her take a seventh science class instead, Sydney Kit was signed up for the art class. She found herself 
-    in a situation where she was taking two art classes: a weekly news video class and a traditional art class. Throughout that year, she painted, drew, did an oil pastel drawing, and came up with a new video every week for the school to watch. Sydney Kit enjoyed the art 
-    class more than expected and knew that art was a passion. <br><br> After graduating, Sydney Kit went to The Ohio State University, like both of her parents, with the intent of majoring in chemistry with a Pre-Med track. During the first semester, 
-    she struggled to go to class every day because she knew that she wasn’t where she belonged. <br><br> After asking for help, Sydney Kit switched her major to Art and Technology. She was nervous, terrified, and anxious of the new changes in 
-    her life but felt liberated and joyous about what was to come. After her second semester at The Ohio State University, Sydney Kit finally felt that she was going in the direction that she wanted.
-    <br><br>Now, she works on learning new techniques including digital painting, 3D modeling, and coding while still creating works by painting and drawing. She is the creator of <i>A Laney Day: The Series</i> along with the comic series <i>Love, Me</i>.</p>
+  <p class="text"> Sydney Kit is a digital, commercial artist from Central Ohio. Inspired by her physical and emotional environment, Sydney Kit creates comic books and animations to evoke positive emotions from her audience. 
+    She currently has two published comic books in her series “Love, Me” and an Audience Choice Award for her piece “To Be Remembered”. </p>
  </div>
   <br>
   <br>
