--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="text.css">
   <link rel="stylesheet" href="navbar.css">
-  <title>Contact</title>
+  <title>Contact Sydney Kit - Digital Artist, Columbus Artist, Commission Art</title>
   <style>
     a:link{
       color: black;
