--- a/loveme/Webcomics.html
+++ b/loveme/Webcomics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Collections</title>
+        <title>Webcomics - Love, Me Class</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../text.css">
         <link rel="stylesheet" href="../navbar.css">
