--- a/shop.html
+++ b/shop.html
@@ -35,7 +35,7 @@
         <span style="padding: 0px 20px;"><a href="#anchor1">New Items</a></span>
         <span style="padding: 0px 20px;"><a href="#anchor2"> Originals</a></span>
         <span style="padding: 0px 20px;"><a href="#anchor3"> Prints</a></span>
-        <span style="padding: 0px 20px;"> <a href="#anchor4"> Comissions</a></span>
+        <span style="padding: 0px 20px;"> <a href="#anchor4"> Commissions</a></span>
     </p> 
     <div style="margin-left: 10%; margin-right: 10%;">
   <img src="img/SydneyKitprofilepic.jpg" width="40%" height="40%">
@@ -93,7 +93,7 @@
 </div>
 
   <br id="anchor4"><br><br>
-  <p class="headertext">Comissions</p>
+  <p class="headertext">Commissions</p>
   <div class="box">
   <img src="img/nature&shapes_je.jpg" style="width: 25%; height: 25%;">
   <a href="mailto:kit.frank.art@gmail.com?subject=Sydney Kit Order - Nature And Shapes Commission&body=Hello, I would like a custom Nature And Shapes piece with (plant), (shape), and (color).">
