--- a/about.html
+++ b/about.html
@@ -34,11 +34,18 @@
   <br>
   <br>
   <br>
-  <img src="collections/files/animals&portraits_sy.jpg" style="width: 60%;">
+  <img src="files/animals&portraits_sy.jpg" style="width: 60%;">
   <br>
   <p class="headertext">Biography</p>
   <p class="text"> Sydney Kit is a digital, commercial artist from Central Ohio. Inspired by her physical and emotional environment, Sydney Kit creates comic books and animations to evoke positive emotions from her audience. 
     She currently has two published comic books in her series “Love, Me” and an Audience Choice Award for her piece “To Be Remembered”. </p>
+    <br>
+    <br>
+    <br>
+    <img src="files/scottpilgrimversion_sydneykit.jpg" style="width: 50%;">
+    <br>
+    <p class="headertext">CV</p>
+    <a href="files/CV_2021" download=""><p class="text">Download 11/2021 Version</p></a>
  </div>
   <br>
   <br>
