--- a/portfolio.html
+++ b/portfolio.html
@@ -32,50 +32,49 @@
   <br>
   <p style="margin-bottom: 0px;margin-top: 10%;" class="titletext">Portfolio</p>
   <div class="text">
-    <p style="margin-left: 15%;" class="headertext">Comics</p>  
+    <p style="margin-right: 59%; margin-bottom: 0px;" class="headertext">Comics</p>  
     <div class="box";>
-        <a href="loveme/about.html"><p style="text-align: right";><i>Love, Me</i>></p><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
-          <img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px";></img>
+        <a href="loveme/about.html"><p style="text-align: left"><i>Love, Me</i></p><img src="files/icon_loveme_promo_yana.jpg" style= "height: 180px; width: 320px";></img>
+          <img src="loveme/bothcomics.jpeg" style= "height: 180px; width: 320px";></img>
       </div>
       <div class="box";>
-        <img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img>
-        <img src="../loveme/Love,Me_cover.png" style= "height: 180px; width: 320px;"></img></a>
+        <img src="loveme/comicbookinside2.jpg" style= "height: 180px; width: 320px";></img>
+        <img src="loveme/" style= "height: 180px; width: 320px;"></img></a>
       </div>
     <br>
       <br>
-      <p style="margin-left: 15%;" class="headertext">Animations</p>  
+      <p style="margin-right: 51%; margin-bottom: 0px;" class="headertext">Animations</p>  
       <div class="box";>
-        <a href="ALaneyDay.html"><p style="text-align: right";><i>Love, Me</i>></p><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
+        <a href="ALaneyDay.html"><p style="text-align: left";><i>A Laney Day</i></p><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
           <img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px";></img>
       </div>
       <div class="box";>
         <img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img>
         <img src="../loveme/Love,Me_cover.png" style= "height: 180px; width: 320px;"></img></a>
       </div>
-      <p style="margin-left: 15%;" class="headertext">Series</p>  
+      <p style="margin-right: 60%; margin-bottom: 0px;" class="headertext">Series</p>  
       <div class="box";>
-        <a href="Portraits&Animals.html"><p style="text-align: right";><i>Love, Me</i>></p><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
+        <a href="Portraits&Animals.html"><p style="text-align: left";><i>Animals&Portraits</i></p><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
           <img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px";></img></a>
       </div>
       <div class="box";>
-        <a href="Nature&Shapes.html"><img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img>
+        <a href="Nature&Shapes.html"><p style="text-align: left";><i>Nature&Shapes</i></p><img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img>
         <img src="../loveme/Love,Me_cover.png" style= "height: 180px; width: 320px;"></img></a>
       </div>
     <br>
-      <p style="margin-left: 15%;" class="headertext">Gallery Art</p>  
+    <p style="margin-right: 50%; margin-bottom: 5%;" class="headertext">Gallery Art</p>
       <div class="box";>
-        <a href="galleryart.html"><p style="text-align: right";><i>Love, Me</i>></p><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
-          <img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px";></img>
+        <a href="galleryart.html">
+          <img src="files/icon_galleryart_wood.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="img/both rings.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img>
       </div>
       <div class="box";>
-        <img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img>
-        <img src="../loveme/Love,Me_cover.png" style= "height: 180px; width: 320px;"></img></a>
+        <img src="files/hockeystilllife.JPG" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/HiaB.jpeg" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
       </div>
     <br>
       <br>
-      <p style="margin-left: 15%;" class="headertext">Commissions</p>  
+      <p style="margin-right: 50%; margin-bottom: 0px;" class="headertext">Commissions</p> 
       <div class="box";>
-        <a href="commission.html"><p style="text-align: right";><i>Love, Me</i>></p><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
+        <a href="commission.html"><p style="text-align: right";><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
           <img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px";></img>
       </div>
       <div class="box";>
@@ -85,7 +84,7 @@
     </div>
     <br>
       <br>
-      <a href="awards.html"><p class="text">Gallery Shows, Public Collections, and Awards</p></a>
+      
  <br>
  <br>
  <br>
