--- a/commission.html
+++ b/commission.html
@@ -32,7 +32,7 @@
         }
   </style>
 </head>
-<body style="text-align: center; margin: 0%; margin-left: 15%; margin-right: 15%;">
+<body style="text-align: center; margin: 0%;">
   <div class="navbar">
   <a href="index.html"><img src="img/SK_logo2.png" width="100%"> </a> 
   <a href="about.html">About</a> 
@@ -41,6 +41,7 @@
  <a href="shop.html">Shop</a>
  <a href="contact.html">Contact</a>
 </div>
+<div style=" margin-left: 15%; margin-right: 15%;">
 <p class="titletext" style="margin-top: 10%;"><b>Commissions</b></p>
 <br>
 <div class="box";>
@@ -63,6 +64,6 @@
 <p class="text">To commission your own, click: <a href="shop.html">here</a>.</p>
 <br>
 <br>
-<br>
+<br></div>
 </body>
 </html>
