--- a/galleryart.html
+++ b/galleryart.html
@@ -32,7 +32,7 @@
         }
   </style>
 </head>
-<body style="text-align: center; margin: 0%; margin-left: 15%; margin-right: 15%;">
+<body style="text-align: center; margin: 0%">
   <div class="navbar">
   <a href="index.html"><img src="img/SK_logo2.png" width="100%"> </a> 
   <a href="about.html">About</a> 
@@ -41,6 +41,7 @@
  <a href="shop.html">Shop</a>
  <a href="contact.html">Contact</a>
 </div>
+<div style="margin-left: 15%; margin-right: 15%;">
 <p class="titletext" style="margin-top: 10%;"><b>Gallery Art</b></p>
 <br>
 <div class="box";>
@@ -60,9 +61,9 @@
     <iframe src="https://player.vimeo.com/video/511997621" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>
 <br>
-<p class="text">For Gallery Shows, Public Collections, and Awards click: <a href="awards.html">here</a>.</p>
+<p class="text">For A List Of Gallery Shows, Public Collections, And Awards, Click: <a href="awards.html">here</a>.</p>
 <br>
 <br>
-<br>
+<br></div>
 </body>
 </html>
