--- a/Nature&Shapes.html
+++ b/Nature&Shapes.html
@@ -38,16 +38,17 @@
    <a href="shop.html">Shop</a>
    <a href="contact.html">Contact</a>
   </div>
-  <p class="titletext" style="margin-top: 10%;"><b><i>Nature&Shapes</i></b></p>
+  <p class="titletext" style="margin-top: 10%; margin-bottom: 0px;"><b><i>Nature&Shapes</i></b></p>
   <br>
   <br>
-  <div style="text-align: center;"><img src="files/IMG_0463.jpg" style="height: 50%; width: 50%;"></div>
+  <div style="text-align: center;"><img src="files/IMG_0463.jpg" style="width: 50%;"></div>
 
 <br>
 <br>
-<p style="font-size: 50px; text-align: center;"><b>How it started</b></p>
-<p style="font-size: 30px; text-align: center;">The <i>Nature&Shapes</i> series was created after a friend got a tattoo of a rose that was done in pointilism inside a triagnle and outlined outside of it and Sydney Kit was interested in how it would look with color.</p>
-<p style="font-size: 30px; text-align: center;">The series started with traditional paintings but was moved to digital paintings after the original four.</p> 
+<div style="margin-left: 15%; margin-right: 15%;">
+<p class="headertext">How it started</p>
+<p class="text">The <i>Nature&Shapes</i> series was created after a friend got a tattoo of a rose that was done in pointilism inside a triagnle and outlined outside of it and Sydney Kit was interested in how it would look with color.
+The series started with traditional paintings but was moved to digital paintings after the original four.</p> 
 <br>
 <br>
  <div class="box">
@@ -110,9 +111,9 @@
 <br>
 <br>
 <br>
-<p style="font-size: 50px; text-align: center;"><b>Want your own?</b></p>
-<p style="font-size: 30px; text-align: center;">Just <a href="../contact.html">send me</a> your favorite color, shape, and plant! Price is $10 each.</p>
+<p class="headertext"><b>Want your own?</b></p>
+<p class="text">Just <a href="../contact.html">send me</a> your favorite color, shape, and plant! Price is $10 each.</p>
 <br>
-
+</div>
 </body>
   </html>
