--- a/Portraits&Animals.html
+++ b/Portraits&Animals.html
@@ -29,31 +29,25 @@
     </style>
   </head>
   
-  <body>
+  <body style="margin-left: 0px;">
     <div class="navbar">
     <a href="home.html"><img src="img/SK_logo2.png" width="81" height="45.6"> </a> 
-    <a href="about.html" style="font-size: 40px;">About</a> 
-    <a href="portfolio.html" style="font-size: 40px;">Portfolio</a>
+    <a href="about.html">About</a> 
+    <a href="portfolio.html">Portfolio</a>
     <a href="blog/index.html">Blog</a> 
-   <a href="shop.html" style="font-size: 40px;">Shop</a>
-   <a href="contact.html" style="font-size: 40px;">Contact</a>
+   <a href="shop.html">Shop</a>
+   <a href="contact.html">Contact</a>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <header style="font-size: 60px; text-align: center;"><b><i>Portraits&Animals</i></b></header>
-  <br>
-  <br>
-  <div style="text-align: center;"><img src="files/animals&portraits_sy.jpg" style="height: 50%;"></div>
+   <div style="text-align: center;">
+  <p class="titletext" style="margin-top: 10%; margin-bottom: 0px;"><i>Portraits&Animals</i></p>
+
+<img src="files/animals&portraits_sy.jpg" style="height: 50%;">
 
 <br>
 <br>
-<p style="font-size: 50px; text-align: center;"><b>How it started</b></p>
-<p style="font-size: 30px; text-align: center;">The <i>Portraits&Animals</i> series was created after the <i>Nature&Shapes</i> series. </p>
-    <p style="font-size: 30px; text-align: center;">This series takes a more personal approach, depicting the person behind the work.</p>
+<p class="headertext"><b>How it started</b></p>
+<p class="text">The <i>Portraits&Animals</i> series was created after the <i>Nature&Shapes</i> series. 
+  This series takes a more personal approach, depicting the person behind the work.</p>
 <br>
 <br>
  <div class="box">
@@ -82,9 +76,9 @@
 <br>
 <br>
 <br>
-<p style="font-size: 50px; text-align: center;"><b>Want your own?</b></p>
-<p style="font-size: 30px; text-align: center;">Just <a href="../contact.html">send me</a> your favorite color, shape, and plant! It's free.</p>
+<p class="headertext"><b>Want your own?</b></p>
+<p class="text">Just <a href="../contact.html">send me</a> your favorite color, animal, and a portrait of you!</p>
 <br>
-
+</div>
 </body>
   </html>
