--- a/loveme/about.html
+++ b/loveme/about.html
@@ -67,7 +67,7 @@
     
       <p class="headertext">How It Started</p>
 <p class="text"><i>Love, Me</i> started off as a semester-long project for an undergraduate class and has continued into a larger series. The course
-was taught by <a href="studiovicieux.org">Mitch Vicieux</a> who is now the co-founder, along with Sydney Kit, of the Columbus-based comic club <a href="cx3.html">CX3</a>.</p>
+was taught by <a href="www.studiovicieux.org">Mitch Vicieux</a> who is now the co-founder, along with Sydney Kit, of the Columbus-based comic club <a href="cx3.html">CX3</a>.</p>
 <img src="IMG_2828.jpeg" style="width: 25%; height: 25%; margin-right: 10px"><img src="comicbook6.jpg" style="width: 25%; height: 25%; margin-left: 10px">
 <br>
 <p class="headertext">How to support the "Love, Me" series</p>
