--- a/portfolio.html
+++ b/portfolio.html
@@ -34,32 +34,26 @@
   <div class="text">
     <p style="margin-right: 59%; margin-bottom: 0px;" class="headertext">Comics</p>  
     <div class="box";>
-        <a href="loveme/about.html"><p style="text-align: left"><i>Love, Me</i></p><img src="files/icon_loveme_promo_yana.jpg" style= "height: 180px; width: 320px";></img>
-          <img src="loveme/bothcomics.jpeg" style= "height: 180px; width: 320px";></img>
+        <a href="loveme/about.html"><p style="text-align: left"><i>Love, Me</i></p><img src="files/icon_loveme_promo_yana.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="loveme/bothcomics.jpeg" style= "height: 180px; width: 320px; margin-left: 5px;"></img>
       </div>
       <div class="box";>
-        <img src="loveme/comicbookinside2.jpg" style= "height: 180px; width: 320px";></img>
-        <img src="loveme/" style= "height: 180px; width: 320px;"></img></a>
+        <img src="loveme/comicbookinside2.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="loveme/LMMS_1.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
       </div>
     <br>
       <br>
       <p style="margin-right: 51%; margin-bottom: 0px;" class="headertext">Animations</p>  
       <div class="box";>
-        <a href="ALaneyDay.html"><p style="text-align: left";><i>A Laney Day</i></p><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
-          <img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px";></img>
-      </div>
-      <div class="box";>
-        <img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img>
-        <img src="../loveme/Love,Me_cover.png" style= "height: 180px; width: 320px;"></img></a>
-      </div>
+        <a href="ALaneyDay.html"><p style="text-align: left"><i>A Laney Day: The Series</i></p><img src="files/A Laney Day The Series.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/laneydecisionicon.png" style= "height: 180px; width: 320px; margin-left: 5px;"></img>
+        </div>
+        <div class="box";>
+          <img src="files/laneynapicon.png" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/laneywintericon.png" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
+        </div>
       <p style="margin-right: 60%; margin-bottom: 0px;" class="headertext">Series</p>  
       <div class="box";>
-        <a href="Portraits&Animals.html"><p style="text-align: left";><i>Animals&Portraits</i></p><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
-          <img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px";></img></a>
+        <a href="Portraits&Animals.html"><p style="text-align: left";><i>Animals&Portraits</i></p><img src="files/animals&portraits_ma.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
       </div>
       <div class="box";>
-        <a href="Nature&Shapes.html"><p style="text-align: left";><i>Nature&Shapes</i></p><img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img>
-        <img src="../loveme/Love,Me_cover.png" style= "height: 180px; width: 320px;"></img></a>
+        <a href="Nature&Shapes.html"><p style="text-align: left"><i>Nature&Shapes</i></p><img src="files/icon_nature&shapes1.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/icon_nature&shapes2.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
       </div>
     <br>
     <p style="margin-right: 50%; margin-bottom: 5%;" class="headertext">Gallery Art</p>
@@ -74,12 +68,10 @@
       <br>
       <p style="margin-right: 50%; margin-bottom: 0px;" class="headertext">Commissions</p> 
       <div class="box";>
-        <a href="commission.html"><p style="text-align: right";><img src="files/A Laney Decision.mp4" style= "height: 180px; width: 320px";></img>
-          <img src="files/animals&portraits_sy.jpg" style= "height: 180px; width: 320px";></img>
+        <a href="commission.html"><p style="text-align: right";><img src="files/kavbasket.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img>
       </div>
       <div class="box";>
-        <img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img>
-        <img src="../loveme/Love,Me_cover.png" style= "height: 180px; width: 320px;"></img></a>
+        <img src="files/BillsBeatz_final.png" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/cat_commission.png" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
       </div>
     </div>
     <br>
