gallery and commission page updates

--- a/commission.html
+++ b/commission.html
@@ -44,21 +44,20 @@
 <div style=" margin-left: 15%; margin-right: 15%;">
 <p class="titletext" style="margin-top: 10%;"><b>Commissions</b></p>
 <br>
-<div class="box";>
-    <iframe src="https://player.vimeo.com/video/492239602" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-    <iframe src="https://player.vimeo.com/video/494958449" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-  </div>
-<div class="box">
-  <iframe src="https://player.vimeo.com/video/496592099" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-  <iframe src="https://player.vimeo.com/video/496592099" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<div class="box" style="margin-bottom: 5%;">
+  <img src="files/caroline.png" width="50%" height="50%" style="margin-right: 5%;"><img src="files/kavbasket.jpg" width="50%" height="50%" style="margin-left: 5%;">
 </div>
-<div class="box">
-    <iframe src="https://player.vimeo.com/video/500661970" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-    <iframe src="https://player.vimeo.com/video/503517348" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<div class="box" style="margin-bottom: 5%;">
+  <img src="files/OCB_logo1_FINAL.jpg" width="50%" height="50%" style="margin-right: 5%;"><img src="files/BillsBeatz_final.png" width="50%" height="50%" style="margin-left: 5%;">
 </div>
-<div class="box">
-    <iframe src="https://player.vimeo.com/video/509336586" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-    <iframe src="https://player.vimeo.com/video/511997621" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<div class="box" style="margin-bottom: 5%;">
+  <img src="files/cat_commission.png" width="50%" height="50%" style="margin-right: 5%;"><img src="files/laney.png" width="50%" height="50%" style="margin-left: 5%;">
+</div>
+<div class="box" style="margin-bottom: 5%;">
+  <img src="files/nature&shapes_ginny.jpg" width="50%" height="50%" style="margin-right: 5%;"><img src="files/nature&shapes_je.jpg" width="50%" height="50%" style="margin-left: 5%;">
+</div>
+<div class="box" style="margin-bottom: 5%;">
+  <img src="files/alix_icon.png" width="50%" height="50%" style="margin-right: 5%;"><img src="files/petpainting.jpg" width="50%" height="50%" style="margin-left: 5%;">
 </div>
 <br>
 <p class="text">To commission your own, click: <a href="shop.html">here</a>.</p>
