--- a/loveme/about.html
+++ b/loveme/about.html
@@ -17,7 +17,7 @@
   </div>
       <br  id="anchor1">
       <p class="titletext" style="margin-bottom: 0px; margin-top: 8%;"><i>Love, Me</i></p>
-      <img src="bothcomics.jpeg" style="width: 50%; height: 50%;">
+      <iframe title="vimeo-player" src="https://player.vimeo.com/video/646719005?h=8b756d9e91" width="640" height="360" frameborder="0" allowfullscreen></iframe>
       <br>
       <p class="headertext">
         <span style="padding: 0px 20px;"><a href="../shop.html">Buy the Comics</a></span>
@@ -31,7 +31,7 @@
     <div style="margin-right: 10%; margin-left: 10%;">
     <p class="headertext">About the Comic Books</p>
       <p class="text"><i>Love, Me</i> is a continuing community project that is comprised of collections of short stories based on submitted advice. As of December 2021, the series features
-      three self-publihsed comic books and twenty-three originally designed animal characters.</p>
+      three self-publihsed comic books and twenty-three originally designed, featured animal characters.</p>
       <div class="w3-content w3-display-container">
         <img class="mySlides" src="comicbook1.jpg" style="width:70%; margin-left: 15%;">
         <img class="mySlides" src="comicbookinside1.jpg" style="width:70%; margin-left: 15%;">
@@ -40,6 +40,8 @@
         <img class="mySlides" src="vol2pandora.jpeg" style="width:70%; margin-left: 15%;">
         <img class="mySlides" src="vol2chance.jpeg" style="width:70%; margin-left: 15%;">
         <img class="mySlides" src="vol2merch.jpeg" style="width:70%; margin-left: 15%;">
+        <img class="mySlides" src="shiloh_comicbookinside.jpg" style="width:70%; margin-left: 15%;">
+        <img class="mySlides" src="squire_comicbookinside.jpg" style="width:70%; margin-left: 15%;">
         <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
       </div>
@@ -67,11 +69,15 @@
     
       <p class="headertext">How It Started</p>
 <p class="text"><i>Love, Me</i> started off as a semester-long project for an undergraduate class and has continued into a larger series. The course
-was taught by <a href="www.studiovicieux.org">Mitch Vicieux</a> who is now the co-founder, along with Sydney Kit, of the Columbus-based comic club <a href="cx3.html">CX3</a>.</p>
-<img src="IMG_2828.jpeg" style="width: 25%; height: 25%; margin-right: 10px"><img src="comicbook6.jpg" style="width: 25%; height: 25%; margin-left: 10px">
+was taught by <a href="http://www.studiovicieux.org">Mitch Vicieux</a> who is now the co-founder, along with Sydney Kit, of the Columbus-based comic club CX3.
+<br><br>It continued outside of class projects and into a second volume, which saw the addition of Candy Princehorn as the script creator. Candy continues to work 
+as the script creator for the series.</p>
+<img src="threebooks.jpg" style="width: 50%; height: 50%;">
 <br>
 <p class="headertext">How to support the "Love, Me" series</p>
-<p class="text">Submit your own advice to be turned into a comic! Send Sydney Kit an <a href="mailto:kit.frank.art@gmail.com?subject=Love, Me Advice Submission">email</a> or fill out this <a href="https://forms.gle/4dHxhksVVWxDBgUz7">form.</a></p>
+<p class="text">Copies of the comic books and stickers are available for purchase at the <a href="../shop.html">shop</a>.</p>
+<p class="text">Submit your own advice to be turned into a comic! Send an <a href="mailto:kit.frank.art@gmail.com?subject=Love, Me Advice Submission">email</a> or fill out this <a href="https://forms.gle/4dHxhksVVWxDBgUz7">form.</a></p>
+<p class="text">Want to support the writer? Commission Candy's work through <a href="mailto:candyprincehorn@yahoo.com">email</a>.</p>
 </div>
 <br>
 <br>
