--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
   <div class="text">
     <p style="margin-right: 59%; margin-bottom: 0px;" class="headertext">Comics</p>  
     <div class="box";>
-        <a href="loveme/about.html"><p style="text-align: left"><i>Love, Me</i></p><img src="files/icon_loveme_promo_yana.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="loveme/bothcomics.jpeg" style= "height: 180px; width: 320px; margin-left: 5px;"></img>
+        <a href="loveme/about.html"><p style="text-align: left"><i>Love, Me</i></p><img src="files/icon_loveme_promo_yana.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="loveme/threebooks.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img>
       </div>
       <div class="box";>
         <img src="loveme/comicbookinside2.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="loveme/LMMS_1.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
@@ -62,7 +62,7 @@
           <img src="files/icon_galleryart_wood.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="img/both rings.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img>
       </div>
       <div class="box";>
-        <img src="files/hockeystilllife.JPG" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/HiaB.jpeg" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
+        <img src="files/galleryart_hockeystilllife.JPG" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/galleryart_HiaB.jpeg" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
       </div>
     <br>
       <br>
@@ -71,7 +71,7 @@
         <a href="commission.html"><p style="text-align: right";><img src="files/kavbasket.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/OCB_logo1_FINAL.jpg" style= "height: 180px; width: 320px";></img>
       </div>
       <div class="box";>
-        <img src="files/BillsBeatz_final.png" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/cat_commission.png" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
+        <img src="files/BillsBeatz_final_icon.png" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/cat_commission.png" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
       </div>
     </div>
     <br>
