--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <div style="margin-left: 10%; margin-right: 10%; ">
   <p style="margin-bottom: 0px;" class="titletext"><b>Sydney Kit</b></p>
   <br>
-  <div><img src="img/profile pic.jpeg" width="60%"></div>
+  <div style="padding:15% 5%;position:relative;"><iframe src="https://player.vimeo.com/video/605768237?h=3841fa4ca7&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="A Distanced Conversation with Sydney Kit"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   <br>
   <p class="headertext">Artist Statement</p>
   <p class="text">Through the digital art of animation and comic books, I create work that evokes an emotional response from my audience to either give them a lighthearted break from the struggles of the world or 
@@ -34,7 +34,7 @@
   <br>
   <br>
   <br>
-  <img src="files/animals&portraits_sy.jpg" style="width: 60%;">
+  <div><img src="img/profile pic.jpeg" width="60%"></div>
   <br>
   <p class="headertext">Biography</p>
   <p class="text"> Sydney Kit is a digital, commercial artist from Central Ohio. Inspired by her physical and emotional environment, Sydney Kit creates comic books and animations to evoke positive emotions from her audience. 
