--- a/galleryart.html
+++ b/galleryart.html
@@ -44,23 +44,19 @@
 <div style="margin-left: 15%; margin-right: 15%;">
 <p class="titletext" style="margin-top: 10%;"><b>Gallery Art</b></p>
 <br>
-<div class="box";>
-    <iframe src="https://player.vimeo.com/video/492239602" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-    <iframe src="https://player.vimeo.com/video/494958449" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<div style="padding:15% 5%;position:relative; margin-bottom: 5%;"><iframe src="https://player.vimeo.com/video/647103231?h=3c0c2b99f0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Love, Me: You Are Not Alone - Gallery Show Set Up"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+<div class="box" style="margin-bottom: 5%;">
+    <img src="files/galleryart_wood.jpg" width="50%" height="50%" style="margin-right: 5%;"><img src="files/galleryart_hockeystilllife.JPG" width="50%" height="50%" style="margin-left: 5%;">
   </div>
-<div class="box">
-  <iframe src="https://player.vimeo.com/video/496592099" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-  <iframe src="https://player.vimeo.com/video/496592099" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-</div>
-<div class="box">
-    <iframe src="https://player.vimeo.com/video/500661970" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-    <iframe src="https://player.vimeo.com/video/503517348" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-</div>
-<div class="box">
-    <iframe src="https://player.vimeo.com/video/509336586" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-    <iframe src="https://player.vimeo.com/video/511997621" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-</div>
-<br>
+  <div style="padding:15% 5% ;position:relative;margin-bottom: 5%;"><iframe src="https://player.vimeo.com/video/486193945?h=8524fb4fbf&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="A Laney Day"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+   <div class="box" style="margin-bottom: 5%;">
+    <img src="files/galleryart__borthrings_frontview.jpg" width="50%" height="50%" style="margin-right: 5%;"><img src="files/galleryart_HiaB.jpeg" width="45%" height="45%" style="margin-left: 5%;">
+  </div>
+  <div style="padding:15% 5%;position:relative; margin-bottom: 5%;"><iframe src="https://player.vimeo.com/video/470005846?h=af2b92c813&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="How Much Did I Sleep Last Night?"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  <div class="box" style="margin-bottom: 5%;">
+    <img src="files/sunflower.JPG" width="50%" height="50%" style="margin-right: 5%;"><img src="files/Great Gatsby Final.jpeg" width="45%" height="45%" style="margin-left: 5%;">
+  </div>
+  <br>
 <p class="text">For A List Of Gallery Shows, Public Collections, And Awards, Click: <a href="awards.html">here</a>.</p>
 <br>
 <br>
