--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <div class="p fixed">
     <div class="titletext">Latest News</div>
     <div class="text">
-      <p><i>Love, Me: You Are Not Alone</i> is now here! See the comic and participate in the interactive exhibit at Urban Arts Space from December 1st to December 11th.
-      <br>Purchase your own copy (and meet Sydney) December 11th from 5pm to 7pm at Urban Arts Space.</p>>
+      <p><i>Love, Me: You Are Not Alone</i> is now here! See the comic and participate in the interactive exhibit at Urban Arts Space from November 30thst to December 18th.
+      <br>Purchase your own copy (and meet Sydney) December 11th from 5pm to 7pm at Urban Arts Space.<br>A new webstie design was uploaded 11/2021 - go check it out!</p>
 </div>
 </div>
 </div>
