--- a/loveme/wallpapers.html
+++ b/loveme/wallpapers.html
@@ -44,7 +44,15 @@
       <a href="Skull_LMMS_wallpaper.jpg" download><img src="Skull_LMMS_wallpaper.jpg" style= "width: 50%;";></img></a>
   </div>
   <div class="box";>
-    <a href="Rachel_LMMS_wallpaper.jpg" download><img style="width: 50%;" src="Rachel_LMMS_wallpaper.jpg"></img></a>
+    <a href="Rachel_LMMS_wallpaper.jpg" download><img style="width: 25%;" src="Rachel_LMMS_wallpaper.jpg"></img></a>
+  </div>
+  <div class="box";>
+    <a href="shawn_wallpaper.jpg" download><img style="width: 50%;" src="shawn_wallpaper.jpg"></img></a>
+      <a href="shawn_wallpaper_notext.jpg" download><img src="shawn_wallpaper_notext.jpg" style= "width: 50%;";></img></a>
+  </div>
+  <div class="box";>
+    <a href="chance_wallpaper.jpg" download><img style="width: 50%;" src="chance_wallpaper.jpg"></img></a>
+      <a href="chance_wallpaper_notext.jpg" download><img src="chance_wallpaper_notext.jpg" style= "width: 50%;";></img></a>
   </div>
   <br>
   <br>
