final updates for review

--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
   <div style="padding:15% 5%;position:relative;"><iframe src="https://player.vimeo.com/video/605768237?h=3841fa4ca7&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="A Distanced Conversation with Sydney Kit"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   <br>
   <p class="headertext">Artist Statement</p>
-  <p class="text">Through the digital art of animation and comic books, I create work that evokes an emotional response from my audience to either give them a lighthearted break from the struggles of the world or 
-    generate a hunger for a new business. With an adaptable art style, I create commercial content that fits a company’s needs and create comic books that advise the audience about advice they unknowingly needed to 
-    hear. My art stimulates engagement across environments. Whether crafting a visual vocabulary for commercial projects or illustrating personal narratives, my art creates a lasting impression on the audience.
+  <p class="text">Through the digital art of animation and comic books, I create work with the intention of allowing the audience to not just know, but to understand the emotions they witness in my work. With bright color 
+    palettes and soft character designs, I create animations of daily dog gestures and comic books that advise the audience about advice they unknowingly needed to heat. My art stimulates engagement across environments and 
+    creates a lasting impression on the audience.
   </p>
   <br>
   <br>
@@ -45,7 +45,7 @@
     <img src="files/scottpilgrimversion_sydneykit.jpg" style="width: 50%;">
     <br>
     <p class="headertext">CV</p>
-    <a href="files/CV_2021" download=""><p class="text">Download 11/2021 Version</p></a>
+    <a href="files/CV_112021.pdf" download><p class="text">Download 11/2021 Version</p></a>
  </div>
   <br>
   <br>
