--- a/loveme/wallpapers.html
+++ b/loveme/wallpapers.html
@@ -55,6 +55,14 @@
       <a href="chance_wallpaper_notext.jpg" download><img src="chance_wallpaper_notext.jpg" style= "width: 50%;";></img></a>
   </div>
   <br>
+  <p class="text">Chance Custom Sport Wallpapers</p>
+  <div class="box";>
+    <a href="Chance_Browns.jpg" download><img style="width: 50%;" src="Chance_Browns.jpg"></img></a>
+      <a href="chance_osu.jpg" download><img src="chance_osu.jpg" style= "width: 50%;";></img></a>
+  </div>
+  <div class="box";>
+      <a href="chance_cbj.jpg" download><img src="chance_cbj.jpg" style= "width: 50%;";></img></a>
+  </div>
   <br>
  <p>Want more? Submit your suggestions:<a href="https://forms.gle/4dHxhksVVWxDBgUz7"> here</a></p>
  <br>
