--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,8 @@
     </div>
     <br>
       <br>
-      
+      <br>
+      <a href="files/ImageList_SydneyKitPortfolio.pdf"><p class="text">Portfolio Image List</p></a>
  <br>
  <br>
  <br>
