--- a/Portraits&Animals.html
+++ b/Portraits&Animals.html
@@ -31,11 +31,11 @@
   
   <body style="margin-left: 0px;">
     <div class="navbar">
-    <a href="home.html"><img src="img/SK_logo2.png" width="81" height="45.6"> </a> 
+    <a href="index.html"><img src="img/SK_logo2.png" width="81" height="45.6"> </a> 
     <a href="about.html">About</a> 
     <a href="portfolio.html">Portfolio</a>
     <a href="blog/index.html">Blog</a> 
-   <a href="shop.html">Shop</a>
+   <a href="https://www.etsy.com/shop/SydneyKit?ref=search_shop_redirect">Shop</a>
    <a href="contact.html">Contact</a>
   </div>
    <div style="text-align: center;">
