--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="about.html">About</a> 
     <a href="portfolio.html">Portfolio</a>
     <a href="blog/index.html">Blog</a> 
-   <a href="shop.html">Shop</a>
+   <a href="https://www.etsy.com/shop/SydneyKit?ref=search_shop_redirect">Shop</a>
    <a href="contact.html">Contact</a>
   </div>
   <div class="fixed">
@@ -31,8 +31,8 @@
   <div class="p fixed">
     <div class="titletext">Latest News</div>
     <div class="text">
-      <p><i>Love, Me: You Are Not Alone</i> is now here! See the comic and participate in the interactive exhibit at Urban Arts Space from November 30thst to December 18th.
-      <br>Purchase your own copy (and meet Sydney) December 11th from 5pm to 7pm at Urban Arts Space.<br>A new webstie design was uploaded 11/2021 - go check it out!</p>
+      <p><i>Love, Me: You Are Not Alone</i> is now here! See the comic and participate in the interactive exhibit at Urban Arts Space from November 30th to December 18th.
+      <br>Purchase your own copy (and meet Sydney) December 18th from 4pm to 6pm at Urban Arts Space.<br>A new webstie design was uploaded 12/2021 - go check it out!</p>
 </div>
 </div>
 </div>
