--- a/awards.html
+++ b/awards.html
@@ -13,7 +13,7 @@
   <a href="about.html">About</a> 
   <a href="portfolio.html">Portfolio</a>
   <a href="blog/index.html">Blog</a> 
- <a href="shop.html">Shop</a>
+ <a href="https://www.etsy.com/shop/SydneyKit?ref=search_shop_redirect">Shop</a>
  <a href="contact.html">Contact</a>
 </div>
 <div style="margin-left: 15%; margin-right: 15%;" class="text">
