--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
   <a href="about.html">About</a> 
   <a href="portfolio.html">Portfolio</a>
   <a href="blog/index.html">Blog</a> 
- <a href="shop.html">Shop</a> 
+ <a href="https://www.etsy.com/shop/SydneyKit?ref=search_shop_redirect">Shop</a> 
  <a href="contact.html">Contact</a>
 </div>
  <br>
