favicon and seo updates

--- a/ALaneyDay.html
+++ b/ALaneyDay.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="text.css">
   <link rel="stylesheet" href="navbar.css">
+  <link rel="icon" type="image/png" href="files/favicon.png">
+  <title>A Laney Day - an animation series by Sydney Kit</title>
+   <!--meta-->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="description" content="A Laney Day - a 2D animation series about the daily interactions of Laney">
+  <meta name="keywords" content="digital art, 2d animation, animation, dog animation, animation series">
+  <meta name="author" content="Sydney Kit">
   <style>
 .box{
             display:flex;
