--- a/about.html
+++ b/about.html
@@ -2,10 +2,17 @@
 <html>
 
 <head>
+   <!--page details-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="text.css">
   <link rel="stylesheet" href="navbar.css">
   <title>About Sydney Kit - Columbus Artist, Digital Artist, Content Creator</title>
+  <link rel="icon" type="image/png" href="files/favicon.png">
+   <!--meta-->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="description" content="About Sydney Kit - Columbus, OH Digital and Comic book Artist">
+  <meta name="keywords" content="digital art, comic art, digital artist, digital painting, comic book, about page">
+  <meta name="author" content="Sydney Kit">
 </head>
 
 <body style="text-align: center; margin: 0px;">
