--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,17 @@
 <html>
 
 <head>
+   <!--page details-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="text.css">
   <link rel="stylesheet" href="navbar.css">
   <title>Contact Sydney Kit - Digital Artist, Columbus Artist, Commission Art</title>
+  <link rel="icon" type="image/png" href="files/favicon.png">
+    <!--meta-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Contacts for Sydney Kit">
+   <meta name="keywords" content="contact page, contact information, instagram, facebook, email">
+   <meta name="author" content="Sydney Kit">
   <style>
     a:link{
       color: black;
