--- a/galleryart.html
+++ b/galleryart.html
@@ -2,10 +2,17 @@
 <html>
 
 <head>
+  <!--page detail-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="text.css">
   <link rel="stylesheet" href="navbar.css">
   <title>Gallery Art - Sydney Kit, Digital and Commercial Artist</title>
+  <link rel="icon" type="image/png" href="files/favicon.png">
+   <!--meta-->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="description" content="Gallery Art completed by Sydney Kit">
+  <meta name="keywords" content="gallery art, painting, traditional art, animation, gallery">
+  <meta name="author" content="Sydney Kit">
   <style>
 .box{
             display:flex;
