--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!--page details-->
+ 
   <link rel="stylesheet" href="parallax.css">
   <link rel="stylesheet" href="text.css">
-  <link rel="stylesheet" href="navbar.css">
-  <title>Sydney Kit - Digital Artist, Columbus Artist, Animator, Content Creator</title>
+  <link rel="stylesheet" href="navbar.css"> 
+  <link rel="icon" type="image/png" href="files/favicon.png">
+  <title>Sydney Kit</title>
+ <!--meta-->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="description" content="Home Page of Sydney Kit - Columbus, OH Digital Artist, Animator, Comic Book Artist">
+  <meta name="keywords" content="digital art, comic art, digital artist, digital painting">
+  <meta name="author" content="Sydney Kit">
 </head>
 
 <body>
@@ -56,7 +63,7 @@
 </div>
 <div class="section">
   <div class="p fixed">
-    <p class="titletext"><a href="shop.html" style="text-decoration: underline; text-decoration-color: #F4DAE2;">Shop</a></p>
+    <p class="titletext"><a href="https://www.etsy.com/shop/SydneyKit?ref=search_shop_redirect" style="text-decoration: underline; text-decoration-color: #F4DAE2;">Shop</a></p>
     <p class="text">Originals and Copies for Sale</p>
     </div>
 </div>
