--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="text.css">
     <link rel="stylesheet" href="navbar.css">
     <title>Portfolio</title>
+    <link rel="icon" type="image/png" href="files/favicon.png">
     <style>
      .box{
         display:flex;
