--- a/Nature&Shapes.html
+++ b/Nature&Shapes.html
@@ -2,6 +2,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../text.css">
     <link rel="stylesheet" href="../navbar.css">
+    <link rel="icon" type="image/png" href="files/favicon.png">
     <style>
   .box{
             display:flex;
