--- a/awards.html
+++ b/awards.html
@@ -2,10 +2,17 @@
 <html>
 
 <head>
+     <!--page details-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="text.css">
   <link rel="stylesheet" href="navbar.css">
   <title>Gallery Shows, Public Collections, and Awards - Sydney Kit, Digital and Commercial Artist</title>
+  <link rel="icon" type="image/png" href="files/favicon.png">
+     <!--meta-->
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="description" content="Gallery Shows, Public Collections, and Awards of Sydney Kit - Digital Artist">
+    <meta name="keywords" content="gallery show, gallery art, public collections, awards, art awards">
+    <meta name="author" content="Sydney Kit">
 </head>
 <body style="text-align: center; margin: 0%">
   <div class="navbar">
