--- a/commission.html
+++ b/commission.html
@@ -2,10 +2,17 @@
 <html>
 
 <head>
+   <!--page details-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="text.css">
   <link rel="stylesheet" href="navbar.css">
   <title>Commissions - Sydney Kit, Digital and Commercial Artist</title>
+  <link rel="icon" type="image/png" href="files/favicon.png">
+   <!--meta-->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="description" content="Commissions completed by Sydney Kit">
+  <meta name="keywords" content="commission, commission art, digital painting, digital art">
+  <meta name="author" content="Sydney Kit">
   <style>
 .box{
             display:flex;
