graduation blog added

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   <br>
   <p class="headertext">Artist Statement</p>
   <p class="text">Through the digital art of animation and comic books, I create work with the intention of allowing the audience to not just know, but to understand the emotions they witness in my work. With bright color 
-    palettes and soft character designs, I create animations of daily dog gestures and comic books that advise the audience about advice they unknowingly needed to heat. My art stimulates engagement across environments and 
+    palettes and soft character designs, I create animations of daily dog gestures and comic books that advise the audience about advice they unknowingly needed to hear. My art stimulates engagement across environments and 
     creates a lasting impression on the audience.
   </p>
   <br>
