--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="titletext">Latest News</div>
     <div class="text">
       <p><i>Love, Me: You Are Not Alone</i> is now here! See the comic and participate in the interactive exhibit at Urban Arts Space from November 30th to December 18th.
-      <br>Purchase your own copy (and meet Sydney) December 18th from 4pm to 6pm at Urban Arts Space.<br>A new webstie design was uploaded 12/2021 - go check it out!</p>
+      <br>Purchase your own copy (and meet Sydney) December 18th from 4pm to 6pm at Urban Arts Space.</p>
 </div>
 </div>
 </div>
